Pound -- history of user-visible changes. 2025-11-05
See the end of file for copying conditions.

Pound is a continuation of the software originally developed by
Robert Segall at Apsis GmbH, which was officially discontinued
on 2022-09-19.  See the README file for details.

Please send pound bug reports to <gray@gnu.org>

Version 4.18.90 (git)

* Detached conditions

Detached condition is a set of conditional statements not associated
with any service, which is assigned a unique symbolic name.  Detached
conditions are defined using the Condition statement in the global
scope of pound configuration file, e.g.:

  Condition "protected"
     Path -beg "/admin"
     ACL -file "internal.acl"
     BasicAuth "htpasswd"
  End

Detached conditions can be invoked using the "Eval" statement, which
is allowed anyplace where the normal conditional is allowed.  Result
of evaluation is cached and reused in subsequent Eval statements
referring to the same way.  E.g.:

  Service
     Eval "protected"
     ...
  End

Detached conditions is a convenient way to define conditional
statements with are used repeatedly in multiple Service statements.

* Support for Lua


Version 4.18, 2025-10-29

* Emacs mode for editing pound configuration files

Major mode for editing pound configuration files in GNU Emacs is
implemented in file src/pound-mode.el.  Its installation and usage is
covered by Chapter 11 of the Pound Manual, entitled "Emacs Major Mode".

* Include statement accepts globbing patterns

If the argument to "Include" configuration statement is a shell
globbing pattern, all regular files matching that pattern will be
included, in lexicographical order.

* New configuration statement: LineBufferSize

Sets the line buffer size.  Line buffer is used when reading request
line, backend response status line, and header fields in both requests
and responses.  Thus, this value limits the maximum length allowed for
these parts of HTTP messages.  By default, it is set to the internal