@@ -849,7 +849,8 @@ enum rewrite_type
     REWRITE_URL_SET,
     REWRITE_PATH_SET,
     REWRITE_QUERY_SET,
-    REWRITE_QUERY_PARAM_SET
+    REWRITE_QUERY_PARAM_SET,
+    REWRITE_QUERY_DELETE
   };
 
 typedef SLIST_HEAD(,rewrite_op) REWRITE_OP_HEAD;
