@@ -70,6 +70,24 @@ end
 ])
 
 PT_CHECK([ListenHTTP
+	Service
+		DeleteQuery
+		Backend
+			Address
+			Port
+		End
+	End
+End
+],
+[GET /echo/one?foo=10&quux=b%20ar
+end
+
+200
+x-orig-uri: /echo/one
+end
+])
+
+PT_CHECK([ListenHTTP
 	Rewrite
 		SetQueryParam "foo" "10"
 		SetQueryParam "quux" "b%20ar"
@@ -87,6 +105,24 @@ end
 
 200
 x-orig-uri: /echo/one?foo=10&quux=b%20ar
+end
+])
+
+PT_CHECK([ListenHTTP
+	Service
+		SetQueryParam "foo"
+		Backend
+			Address
+			Port
+		End
+	End
+End
+],
+[GET /echo/one?foo=10&quux=b%20ar
+end
+
+200
+x-orig-uri: /echo/one?quux=b%20ar
 end
 ])
 
