@@ -78,6 +78,26 @@ end
 PT_CHECK([ListenHTTP
 	Service
 		Rewrite
+			DeleteQuery
+		End
+		Backend
+			Address
+			Port
+		End
+	End
+End
+],
+[GET /echo/one?foo=10&quux=b%20ar
+end
+
+200
+x-orig-uri: /echo/one
+end
+])
+
+PT_CHECK([ListenHTTP
+	Service
+		Rewrite
 			SetQueryParam "foo" "10"
 			SetQueryParam "quux" "b%20ar"
 		End
@@ -93,6 +113,26 @@ end
 
 200
 x-orig-uri: /echo/one?foo=10&quux=b%20ar
+end
+])
+
+PT_CHECK([ListenHTTP
+	Service
+		Rewrite
+			SetQueryParam "foo"
+		End
+		Backend
+			Address
+			Port
+		End
+	End
+End
+],
+[GET /echo/one?foo=10&quux=b%20ar
+end
+
+200
+x-orig-uri: /echo/one?quux=b%20ar
 end
 ])
 
